@@ -8,10 +8,10 @@ gwt.sdk = /Users/juha/gwt/gwt-2.4.0
 #  - Minor version for compatible features
 #  - Last version for bug fixes
 #
-version = 2.14.0_SNAPSHOT-2013-05-11
+version = 2.14.0_SNAPSHOT-2013-05-26
 
 # Build date (use YYYY-MM-DD format)
-build.date = 2013-05-11
+build.date = 2013-05-26
 
 # Build Identifier (arbitrary string name to match major.minor version -- for convenience)
 version.name = Markab
